--- a/html/DEPalldialogue.html
+++ b/html/DEPalldialogue.html
@@ -7,14 +7,14 @@
         <meta property="og:title" content="All DEP Dialogue">
         <meta property="og:description" content="A dump of all dialogue in Temmie's game &quot;Dweller's Empty Path&quot;.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/yoki/Neutral.png" type="image/png">
-        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/yoki/Neutral.png" type="image/png">
+        <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
-        <script src="../js/textbox.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <script src="/js/bootstrap.min.js"></script>
+        <script src="/js/textbox.js"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/DEPalldialogue"/>
         <title>All DEP Dialogue</title>
     </head>
@@ -29,7 +29,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Smirk.png
+                    /images/faces/spax/Smirk.png
                         "></img>
                     Yo! It's me! Spax!
                 </div>
@@ -38,7 +38,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Neutral.png
+                    /images/faces/spax/Neutral.png
                         "></img>
                     I've been in the DEP server for over a year and a half now, and I've been wanting to give back to the community for quite awhile now.
                 </div>
@@ -46,7 +46,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Woo.png
+                    /images/faces/spax/Woo.png
                         "></img>
                 So now I'm making a webpage that hosts all of DEP's dialogue as seen in-game!
                 </div>
@@ -54,7 +54,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Look.png
+                    /images/faces/spax/Look.png
                         "></img>
                     This is still currently a work in progress, and it's going to take a lengthy amount of time to port the dialogue over 100%.
                 </div>
@@ -62,7 +62,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Smirk.png
+                    /images/faces/spax/Smirk.png
                         "></img>
                     But at least I'm doing <i>something</i> for it. Think of it as a passion project for me!
                 </div>
@@ -70,7 +70,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Look.png
+                    /images/faces/spax/Look.png
                         "></img>
                     (Much like how I made a .ttf file of DEP's font too a few weeks ago.)
                 </div>
@@ -78,7 +78,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Blush.png
+                    /images/faces/spax/Blush.png
                         "></img>
                     Well, I hope you enjoy!
                 </div>
@@ -86,7 +86,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/aimottle/Unsure.png
+                    /images/faces/aimottle/Unsure.png
                         "></img>
                     Spax is still working on the site... come back here later when it updates.
                 </div>
@@ -162,7 +162,7 @@
             <div class="text-box flex-container">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Surprised.png
+                    /images/faces/yoki/Surprised.png
                         "></img>
                     .............!!!
                 </div>
@@ -175,7 +175,7 @@
             <div class="text-box flex-container">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Neutral.png
+                    /images/faces/yoki/Neutral.png
                         "></img>
                     ...............
                 </div>
@@ -183,7 +183,7 @@
             <div class="text-box flex-container">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Disheartened.png
+                    /images/faces/yoki/Disheartened.png
                         "></img>
                     ....Another nightmare..
                 </div>
@@ -196,7 +196,7 @@
             <div class="text-box flex-container">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Disheartened.png
+                    /images/faces/yoki/Disheartened.png
                         "></img>
                     I’ve been getting a lot of these lately....
                 </div>
@@ -204,7 +204,7 @@
             <div class="text-box flex-container">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Disheartened.png
+                    /images/faces/yoki/Disheartened.png
                         "></img>
                     ...
                 </div>
@@ -212,7 +212,7 @@
             <div class="text-box flex-container">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Annoyed.png
+                    /images/faces/yoki/Annoyed.png
                         "></img>
                     ..I have a feeling HE’s behind this one again.
                 </div>
@@ -220,7 +220,7 @@
             <div class="text-box flex-container">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Annoyed.png
+                    /images/faces/yoki/Annoyed.png
                         "></img>
                     ........
                 </div>
@@ -228,7 +228,7 @@
             <div class="text-box flex-container">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Think.png
+                    /images/faces/yoki/Think.png
                         "></img>
                     I don’t think I can fall back asleep after THAT.
                 </div>
@@ -236,7 +236,7 @@
             <div class="text-box flex-container">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Annoyed.png
+                    /images/faces/yoki/Annoyed.png
                         "></img>
                     ...
                 </div>
@@ -249,7 +249,7 @@
             <div class="text-box flex-container">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Look.png
+                    /images/faces/yoki/Look.png
                         "></img>
                     Well...<br>
                     No use laying around in bed.
@@ -263,7 +263,7 @@
             <div class="text-box flex-container">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Neutral.png
+                    /images/faces/yoki/Neutral.png
                         "></img>
                     Guess I’ll go for a walk to clear my mind a bit.
                 </div>
@@ -274,6 +274,6 @@
                 </div>
             </div>
         </div>
-        <script src="../js/scrollparallax.js" type=text/javascript></script>
+        <script src="/js/scrollparallax.js" type=text/javascript></script>
     </body>
 </html>
