--- a/html/MojoArrowAdvice.html
+++ b/html/MojoArrowAdvice.html
@@ -7,13 +7,13 @@
         <meta property="og:title" content="Mojo's Arrow Advice!">
         <meta property="og:description" content="My create project.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png" type="image/png">
-        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <meta name="og:image" itemprop="image" content="/images/faces/spax/Smirk.png" type="image/png">
+        <link rel="icon" href="https://spiritaxolotl.github.io/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <script src="/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/MojoArrowAdvice"/>
         <title>Mojo's Arrow Advice!</title>
     </head>
@@ -37,6 +37,6 @@
                     </div>
                 </div>
             </div>
-        <script src="../js/scrollparallax.js" type=text/javascript></script>
+        <script src="/js/scrollparallax.js" type=text/javascript></script>
     </body>
 </html>
