--- a/html/changelog.html
+++ b/html/changelog.html
@@ -7,13 +7,13 @@
         <meta property="og:title" content="All Spax DEP Face Sprites">
         <meta property="og:description" content="Manually documenting major changes to the site.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png" type="image/png">
-        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+        <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <script src="/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/changelog"/>
         <title>Changelog</title>
     </head>
@@ -48,7 +48,7 @@
             <div class="text-box long-flex-container unselectable">
                 <div>
                 <u>Wednesday, Mar 9, 2022</u><br>
-                - Added <a href="../html/MojoArrowAdvice" target="_blank">my create project</a> to the site (was a skeleton page at first because I didn't know how to embed the program)
+                - Added <a href="/html/MojoArrowAdvice" target="_blank">my create project</a> to the site (was a skeleton page at first because I didn't know how to embed the program)
                 </div>
             </div>
             <div class="text-box long-flex-container unselectable">
@@ -75,7 +75,7 @@
                 <div>
                 <u>Wednesday, Mar 2, 2022</u><br>
                 - ADDED MORE .DS_STORE FILES TO THE .GITIGNORE<br>
-                - Added the "<a href="../html/DEPalldialogue" target="_blank">All DEP Dialogue</a>" page as a gift to the DEP community<br>
+                - Added the "<a href="/html/DEPalldialogue" target="_blank">All DEP Dialogue</a>" page as a gift to the DEP community<br>
                 &nbsp;&nbsp; • I didn't add any text boxes yet; this was just making the site
                 </div>
             </div>
@@ -84,7 +84,7 @@
                 <u>Tuesday, Mar 1, 2022</u><br>
                 - Fixed some of the linked webpages not working in a few of the files<br>
                 - My never-ending journey to make the text boxes the closest to what it looks like in the game continues with a text align fix<br>
-                - Updated the <a href="../html/isspaxatschool" target="_blank">Is Spax At School</a> site that removed the not working javascript and added a live time for me (thanks to the MRC3 timezone code I wrote) and included an "I do this at this time" key at the bottom. I will one day come back to fix the javascript.<br>
+                - Updated the <a href="/html/isspaxatschool" target="_blank">Is Spax At School</a> site that removed the not working javascript and added a live time for me (thanks to the MRC3 timezone code I wrote) and included an "I do this at this time" key at the bottom. I will one day come back to fix the javascript.<br>
                 &nbsp;&nbsp; • Added discord's status colors in the CSS<br>
                 - Added a file that makes it so the .html extension doesn't need to be in the url for the site to work
                 </div>
@@ -112,14 +112,14 @@
                 <u>Wednesday, Feb 16, 2022</u><br>
                 - Correctly implemented the background scroll parallax with help from HeySora :tada:<br>
                 - Fixed some of page metatada because I forgot to change it when copy/pasting code to make new webpages<br>
-                - Added a <a href="../html/mrc3timezones" target="_blank">timezone</a> page for my team participating in MRC3<br>
+                - Added a <a href="/html/mrc3timezones" target="_blank">timezone</a> page for my team participating in MRC3<br>
                 - Fixed the weird characters that didn't translate ISO to UTF-8 correctly when copy-pasting stuff in the index.html
                 </div>
             </div>
             <div class="text-box long-flex-container unselectable">
                 <div>
                 <u>Tuesday, Feb 15, 2022</u><br>
-                - Added a "<a href="../html/contactme" target="_blank">contact me</a>" page when I'm supposedly at school (this will probably never get used)<br>
+                - Added a "<a href="/html/contactme" target="_blank">contact me</a>" page when I'm supposedly at school (this will probably never get used)<br>
                 - Tried to add background parallax
                 </div>
             </div>
@@ -226,6 +226,6 @@
                 </div>
             </div>
         </div>
-        <script src="../js/scrollparallax.js" type=text/javascript></script>
+        <script src="/js/scrollparallax.js" type=text/javascript></script>
     </body>
 </html>
