--- a/html/fanart.html
+++ b/html/fanart.html
@@ -8,13 +8,13 @@
         <meta property="og:title" content="Spax Fanart">
         <meta property="og:description" content="A collection of all fanworks of my chracter, &quot;Spax&quot;.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png" type="image/png">
-        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+        <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <script src="/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/fanart"/>
         <title>Spax Fanart</title>
     </head>
@@ -23,7 +23,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Smirk.png
+                    /images/faces/spax/Smirk.png
                         "></img>
                     Yo! This is all the fanart that you guys made of my character!
                 </div>
@@ -31,7 +31,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Blush.png
+                    /images/faces/spax/Blush.png
                         "></img>
                     I hope you enjoy it!
                 </div>
@@ -39,51 +39,51 @@
             <!--
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/bananas_WHAT.png"></img><br>
+                    <img src="/images/misc/fanart/bananas_WHAT.png"></img><br>
                     Drawn by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a>...
                 </div>
             </div>
             -->
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/minty_nahua.png"></img><br>
+                    <img src="/images/misc/fanart/minty_nahua.png"></img><br>
                     Drawn by <a href="https://discord.com/users/667471786560061440/" target="_blank">minty</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/bean_nahua_1.png"></img><br>
+                    <img src="/images/misc/fanart/bean_nahua_1.png"></img><br>
                     Drawn by <a href="https://discord.com/users/685328250548781066/" target="_blank">bean</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/gunk_neko_nahua.png"></img><br>
+                    <img src="/images/misc/fanart/gunk_neko_nahua.png"></img><br>
                     Drawn by <a href="https://discord.com/users/518490426261372931/" target="_blank">gunk</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/uray_neko_nahua.png"></img><br>
+                    <img src="/images/misc/fanart/uray_neko_nahua.png"></img><br>
                     Drawn by <a href="https://discord.com/users/260236669041639425/" target="_blank">URAY</a><br>(requested)
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/n3therwolf_nahua.jpg"></img><br>
+                    <img src="/images/misc/fanart/n3therwolf_nahua.jpg"></img><br>
                     Drawn by <a href="https://discord.com/users/907467523090448414/" target="_blank">N3therwolf</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/cyus_nahua.png"></img><br>
+                    <img src="/images/misc/fanart/cyus_nahua.png"></img><br>
                     Drawn by <a href="https://discord.com/users/284123108212867074/" target="_blank">Cyus</a>
                 </div>
             </div>
             <!--
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/minty_nahua_old.jpg"></img><br>
+                    <img src="/images/misc/fanart/minty_nahua_old.jpg"></img><br>
                     Drawn by <a href="https://discord.com/users/667471786560061440/" target="_blank">minty</a>
                 </div>
             </div>
@@ -91,51 +91,51 @@
             <!--
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/bananas_nahua_idle.gif"></img><br>
+                    <img src="/images/misc/fanart/bananas_nahua_idle.gif"></img><br>
                     Drawn by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a><br>(commission)
                 </div>
             </div>
             -->
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/timber_nahua_group.png"></img><br>
+                    <img src="/images/misc/fanart/timber_nahua_group.png"></img><br>
                     Drawn by <a href="https://discord.com/users/650333611475730433/" target="_blank">Timber</a>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/bananas_spax_4-1.jpg"></img><br>
-                    <img src="../images/misc/fanart/bananas_spax_4-2.jpg"></img><br>
-                    <img src="../images/misc/fanart/bananas_spax_4-3.jpg"></img><br>
+                    <img src="/images/misc/fanart/bananas_spax_4-1.jpg"></img><br>
+                    <img src="/images/misc/fanart/bananas_spax_4-2.jpg"></img><br>
+                    <img src="/images/misc/fanart/bananas_spax_4-3.jpg"></img><br>
                     Modelled/3D-printed by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a><br>(misunderstood by Zuka)
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/bananas_nahua_3-2.png"></img><br>
+                    <img src="/images/misc/fanart/bananas_nahua_3-2.png"></img><br>
                     Drawn by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a><br>(partially requested)
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/bananas_nahua_2-2.gif"></img><br>
+                    <img src="/images/misc/fanart/bananas_nahua_2-2.gif"></img><br>
                     Drawn by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a><br>(partially requested)
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <img src="../images/misc/fanart/bananas_spax_1a.png"></img><br>
+                    <img src="/images/misc/fanart/bananas_spax_1a.png"></img><br>
                     <!--
-                    <img src="../images/misc/fanart/bananas_spax_1b.png"></img><br>
+                    <img src="/images/misc/fanart/bananas_spax_1b.png"></img><br>
                     -->
-                    <img src="../images/misc/fanart/bananas_spax_1c.png"></img><br>
+                    <img src="/images/misc/fanart/bananas_spax_1c.png"></img><br>
                     Drawn by <a href="https://discord.com/users/590639673433653248/" target="_blank">1LikeBananas</a><br>
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <!--<img src="../images/misc/debug_line.png"></img><br>-->
-                    <img src="../images/misc/fanart/whizzy_spax_booba.png"></img><br>
+                    <!--<img src="/images/misc/debug_line.png"></img><br>-->
+                    <img src="/images/misc/fanart/whizzy_spax_booba.png"></img><br>
                     Drawn by <a href="https://discord.com/users/329061333712633861/" target="_blank">Whizzy</a>
                 </div>
             </div>
@@ -147,25 +147,25 @@
                     Enjoy!
                     -Spax
                     -->
-                    <img src="../images/misc/fanart/wasabi_spax_1.png"></img><br>
-                    <!--<img src="../images/misc/fanart/spiritaxolotl_full.png"></img><br>-->
+                    <img src="/images/misc/fanart/wasabi_spax_1.png"></img><br>
+                    <!--<img src="/images/misc/fanart/spiritaxolotl_full.png"></img><br>-->
                     Drawn by <a href="https://discord.com/users/801843375102885888/" target="_blank">Wasabi</a><!--, and vectorized by <a href="https://discord.com/users/545395873891483662/" target="_blank">me</a>--><br>(requested)
                 </div>
             </div>
             <div class="fart-text-box fart-flex-container unselectable">
                 <div>
-                    <!--<img src="../images/misc/debug_line.png"></img><br>-->
-                    <img src="../images/misc/fanart/midna_spax.png"></img><br>
+                    <!--<img src="/images/misc/debug_line.png"></img><br>-->
+                    <img src="/images/misc/fanart/midna_spax.png"></img><br>
                     Drawn by <a href="https://discord.com/users/145929070209794049/" target="_blank">Midna</a><br>(requested)
                 </div>
             </div>
 
             <div class="text-box flex-container unselectable">
                 <div>
-                    (<a href="../html/main">Click here</a> to go back to the main page!)
+                    (<a href="/html/main">Click here</a> to go back to the main page!)
                 </div>
             </div>
         </div>
-        <script src="../js/scrollparallax.js"></script>
+        <script src="/js/scrollparallax.js"></script>
     </body>
 </html>
