--- a/html/isspaxatschool.html
+++ b/html/isspaxatschool.html
@@ -7,13 +7,13 @@
         <meta property="og:title" content="Is Spax Currently At School?">
         <meta property="og:description" content="See if I'm currently at school or not!">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png" type="image/png">
-        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+        <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <script src="/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/isspaxatschool"/>
         <title>Is Spax At School?</title>
     </head>
@@ -22,7 +22,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Smirk.png
+                    /images/faces/spax/Smirk.png
                         "></img>
                     Yo. Spax here. The javascript I wrote for this website doesn't work at the moment, so I'll be updating this manually until I fix it.
                 </div>
@@ -30,7 +30,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Blush.png
+                    /images/faces/spax/Blush.png
                         "></img>
                     Currently I'm TOO LAZY TO EDIT THIS EVERY FUCKING TIME I TRANSITION.
                 </div>
@@ -38,7 +38,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Look.png
+                    /images/faces/spax/Look.png
                         "></img>
                     Yea... no... this page is not gonna be useful until I actually fix the javascript.
                 </div>
@@ -46,7 +46,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Smirk.png
+                    /images/faces/spax/Smirk.png
                         "></img>
                     But for now, I'll leave you with a (working) clock configured to my timezone.
                 </div>
@@ -91,7 +91,7 @@
                 </div>
             </div>
         </div>
-        <script src="../js/timezonething.js" type=text/javascript></script>
+        <script src="/js/timezonething.js" type=text/javascript></script>
         <!--<div class="text-box flex-container unselectable">
             <div style="color:red;">
                 Current status: Broken.<br>
@@ -262,6 +262,6 @@
             }
         }
         </script>
-        <script src="../js/scrollparallax.js" type=text/javascript></script>
+        <script src="/js/scrollparallax.js" type=text/javascript></script>
     </body>
 </html>
