--- a/html/iwanttodie.html
+++ b/html/iwanttodie.html
@@ -8,14 +8,14 @@
         <meta property="og:title" content="I want to die.">
         <meta property="og:description" content="I am in pain.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Pensive.png">
-        <link rel="icon" href="../images/icons/Pensive_Circle.png"></link>
+        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Pensive.png">
+        <link rel="icon" href="/images/icons/Pensive_Circle.png"></link>
         <!--phucking bootstrap-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <title>I want to die.</title>
     </head>
     <body>
@@ -265,7 +265,7 @@
                 </div>
             </div>
         </div>
-        <script src="../js/scrollparallax.js" type=text/javascript></script>
+        <script src="/js/scrollparallax.js" type=text/javascript></script>
         <!--<iframe src="My_Time_Full(SpedUp).ogg" allow="autoplay loop" style="position:absolute;z-index:-9999;margin-left:10000px;" id="iframeAudio">
         </iframe> 
         <audio controls autoplay loop style="position:absolute;z-index:-9999;margin-left:10000px;" id="playAudio">
