--- a/html/main.html
+++ b/html/main.html
@@ -9,12 +9,12 @@
         <meta property="og:description" content="I make dumb shit and spend most of my time on the things that don't matter.">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="/images/faces/spax/Smirk.png" type="image/png">
-        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <link rel="icon" href="https://spiritaxolotl.github.io/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <script src="/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/main"/>
         <title>Spax's Site</title>
     </head>
@@ -22,14 +22,14 @@
         <div id="bg">
             <div class="text-box flex-container unselectable">
                 <div>
-                    <a href="../html/sitelist">Click here</a> to see my full site list!<br>
+                    <a href="/html/sitelist">Click here</a> to see my full site list!<br>
                     -Spax
                 </div>
             </div>
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/claire/Neutral.png
+                    /images/faces/claire/Neutral.png
                         "></img>
                     Hey nerds. It's me, Claire.
                 </div>
@@ -37,7 +37,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/claire/Happy.png
+                    /images/faces/claire/Happy.png
                         "></img>
                     I am now on a poggers website. Woo!
                 </div>
@@ -45,7 +45,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/claire/Sigh.png
+                    /images/faces/claire/Sigh.png
                         "></img>
                     Anyways it's time for some fucking debugging.
                 </div>
@@ -53,7 +53,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/aimottle/Unsure.png
+                    /images/faces/aimottle/Unsure.png
                         "></img>
                     Spax, you don't know what you're doing at all, do you?
                 </div>
@@ -61,7 +61,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Worried.png
+                    /images/faces/spax/Worried.png
                         "></img>
                     Well no... but-
                 </div>
@@ -69,7 +69,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Worried.png
+                    /images/faces/spax/Worried.png
                         "></img>
                     ...
                 </div>
@@ -77,7 +77,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Pensive.png
+                    /images/faces/spax/Pensive.png
                         "></img>
                 </div>
             </div>
@@ -96,7 +96,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/aimottle/Neutral.png
+                    /images/faces/aimottle/Neutral.png
                         "></img>
                     HOLY SHIT THEY ACTUALLY FIXED MOST OF THE CODE
                 </div>
@@ -104,7 +104,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/claire/Aghast.png
+                    /images/faces/claire/Aghast.png
                         "></img>
                     How tf-
                 </div>
@@ -112,7 +112,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Dizzy.png
+                    /images/faces/spax/Dizzy.png
                         "></img>
                     I have no clue how I did it I'm so tired now
                 </div>
@@ -120,7 +120,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Sweat_Drop.png
+                    /images/faces/yoki/Sweat_Drop.png
                         "></img>
                     (I still don't know where the <i>fuck</i> I am-)
                 </div>
@@ -142,6 +142,6 @@
                 );
             });
         </script>-->
-        <script src="../js/scrollparallax.js"></script>
+        <script src="/js/scrollparallax.js"></script>
     </body>
 </html>
