--- a/html/sitelist.html
+++ b/html/sitelist.html
@@ -9,12 +9,12 @@
         <meta property="og:description" content="A place that links every public page currently on my website!">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png">
-        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <script src="/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/sitelist"/>
         <title>Spax's Site List</title>
     </head>
@@ -23,7 +23,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Smirk.png
+                    /images/faces/spax/Smirk.png
                         "></img>
                     Yo! It's me, Spax!<br>
                     This is my full site list.
@@ -32,7 +32,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Look.png
+                    /images/faces/spax/Look.png
                         "></img>
                     I'll try to keep this page as up-to-date as possible... but don't expect me to be perfect. 
                 </div>
@@ -40,7 +40,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                     <img src="
-                ../images/faces/spax/Blush.png
+                /images/faces/spax/Blush.png
                     "></img>
                 I hope you enjoy my webpages!
                 </div>
@@ -113,6 +113,6 @@
                 </div>
             </div>
         </div>
-        <script src="../js/scrollparallax.js" type=text/javascript></script>
+        <script src="/js/scrollparallax.js" type=text/javascript></script>
     </body>
 </html>
