--- a/html/spaxARG.html
+++ b/html/spaxARG.html
@@ -10,12 +10,12 @@
         <meta property="og:description" content="">
         <meta property="og:type" content="website">
         <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
-        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <script src="/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/spaxARG"/>
         
         <meta http-equiv="Refresh" content="0; url='https://www.timeanddate.com/countdown/generic?iso=20220715T12&p0=419&msg=Spax+ARG&font=sanserif&csz=1'"/>
@@ -26,12 +26,12 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/claire/Neutral.png
+                    /images/faces/claire/Neutral.png
                         "></img>
                     Redircting nerds...
                 </div>
             </div>
         </div>
-        <script src="../js/scrollparallax.js"></script>
+        <script src="/js/scrollparallax.js"></script>
     </body>
 </html>
