--- a/html/allspaxfaces.html
+++ b/html/allspaxfaces.html
@@ -7,13 +7,13 @@
         <meta property="og:title" content="All Spax DEP Face Sprites">
         <meta property="og:description" content="A collection of all of the sprites that I made for a tiny gag in the test webpage.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png" type="image/png">
-        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+        <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <script src="/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/allspaxfaces"/>
         <title>All of Spax's Face Sprites</title>
     </head>
@@ -22,7 +22,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Blush.png
+                    /images/faces/spax/Blush.png
                         "></img>
                     Blush
                 </div>
@@ -30,7 +30,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Confused.png
+                    /images/faces/spax/Confused.png
                         "></img>
                     Confused
                 </div>
@@ -38,7 +38,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Disappointed.png
+                    /images/faces/spax/Disappointed.png
                         "></img>
                 Disappointed
                 </div>
@@ -46,7 +46,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Dizzy.png
+                    /images/faces/spax/Dizzy.png
                         "></img>
                     Dizzy
                 </div>
@@ -54,7 +54,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Enraged.png
+                    /images/faces/spax/Enraged.png
                         "></img>
                     Enraged
                 </div>
@@ -62,7 +62,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Happy.png
+                    /images/faces/spax/Happy.png
                         "></img>
                     Happy
                 </div>
@@ -70,7 +70,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Look.png
+                    /images/faces/spax/Look.png
                         "></img>
                     Look
                 </div>
@@ -78,7 +78,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Neutral.png
+                    /images/faces/spax/Neutral.png
                         "></img>
                     Neutral
                 </div>
@@ -86,7 +86,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Pensive.png
+                    /images/faces/spax/Pensive.png
                         "></img>
                     Pensive
                 </div>
@@ -94,7 +94,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Sleep.png
+                    /images/faces/spax/Sleep.png
                         "></img>
                     Sleep
                 </div>
@@ -102,7 +102,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Smirk.png
+                    /images/faces/spax/Smirk.png
                         "></img>
                     Smirk
                 </div>
@@ -110,7 +110,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Surprised.png
+                    /images/faces/spax/Surprised.png
                         "></img>
                     Surprised
                 </div>
@@ -118,7 +118,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Sus.png
+                    /images/faces/spax/Sus.png
                         "></img>
                     Sus
                 </div>
@@ -126,7 +126,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Sweat_Drop.png
+                    /images/faces/spax/Sweat_Drop.png
                         "></img>
                     Sweat Drop
                 </div>
@@ -134,7 +134,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Talk.png
+                    /images/faces/spax/Talk.png
                         "></img>
                     Talk
                 </div>
@@ -142,7 +142,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Woo.png
+                    /images/faces/spax/Woo.png
                         "></img>
                     Woo!
                 </div>
@@ -150,12 +150,12 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Worried.png
+                    /images/faces/spax/Worried.png
                         "></img>
                     Worried
                 </div>
             </div>
         </div>
-        <script src="../js/scrollparallax.js" type=text/javascript></script>
+        <script src="/js/scrollparallax.js" type=text/javascript></script>
     </body>
 </html>
