--- a/html/contactme.html
+++ b/html/contactme.html
@@ -7,13 +7,13 @@
         <meta property="og:title" content="Is Spax Currently At School?">
         <meta property="og:description" content="See if I'm currently at school or not!">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png" type="image/png">
-        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+        <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <script src="/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/contactme"/>
         <title>Contact Me While I'm In School!</title>
     </head>
@@ -29,6 +29,6 @@
             </div>
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScx4EzQf435cuU7P_Uyz814gXrKKaJktjawXf2EPAvbOS6mRg/viewform?embedded=true" width="640" height="832" frameborder="0" marginheight="0" marginwidth="0" style="margin: 0 auto;">Loading...</iframe>
         </div>
-        <script src="../js/scrollparallax.js" type=text/javascript></script>
+        <script src="/js/scrollparallax.js" type=text/javascript></script>
     </body>
 </html>
