--- a/html/mrc3timezones.html
+++ b/html/mrc3timezones.html
@@ -7,13 +7,13 @@
         <meta property="og:title" content="Mods Rush Couples 3 Splixel Timezones">
         <meta property="og:description" content="The timezones of the team members of SpiritAxolotl, Pentaxel, and Splittikin">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png" type="image/png">
-        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+        <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <script src="/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/mrc3timezones"/>
         <title>Mods Rush Couples 3 Splixel Timezones</title>
     </head>
@@ -46,10 +46,10 @@
             </div>-->
             <div class="text-box flex-container unselectable">
                 <div>
-                    (And <a href="../html/main.html">click here</a> to go back to the main page!)
+                    (And <a href="/html/main.html">click here</a> to go back to the main page!)
                 </div>
             </div>
-            <script src="../js/timezonething.js" type=text/javascript></script>
-            <script src="../js/scrollparallax.js" type=text/javascript></script>
+            <script src="/js/timezonething.js" type=text/javascript></script>
+            <script src="/js/scrollparallax.js" type=text/javascript></script>
     </body>
 </html>
