--- a/html/rangalshutthehellup.html
+++ b/html/rangalshutthehellup.html
@@ -7,15 +7,15 @@
         <meta property="og:title" content="Rangal Shut The Hell Up">
         <meta property="og:description" content="A site for when you need rangal to just phucking shut up.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png" type="image/png">
-        <link rel="icon" href="../images/faces/claire/Mad.png"></link>
+        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
+        <link rel="icon" href="/images/faces/claire/Mad.png"></link>
         <title>SHUR UP RANGAK</title>
         <!--NOTE: Those typos are on purpose. I know it's supposed to say "SHUT UP RANGAL" but the typos are funnier imo-->
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <script src="/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/rangalshutthehellup"/>
     </head>
     <body>
@@ -23,7 +23,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/claire/Mad.png
+                    /images/faces/claire/Mad.png
                         "></img>
                     Rangal shut the hell up.
                 </div> 
@@ -31,7 +31,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Upset.png
+                    /images/faces/yoki/Upset.png
                         "></img>
                     You went too far this time.
                 </div> 
@@ -39,7 +39,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/este/Stare.png
+                    /images/faces/este/Stare.png
                         "></img>
                     ...wtf
                 </div> 
@@ -47,7 +47,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/caina/Disapproval.png
+                    /images/faces/caina/Disapproval.png
                         "></img>
                     I can't believe you would say something like that.
                 </div> 
@@ -55,7 +55,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/dragon/Stern.png
+                    /images/faces/dragon/Stern.png
                         "></img>
                     I hope you regret what you said.
                 </div> 
@@ -63,7 +63,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/prince/Appalled.png
+                    /images/faces/prince/Appalled.png
                         "></img>
                     This is going in your permanent records!
                 </div> 
@@ -71,7 +71,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/tigertaur/Grin.png
+                    /images/faces/tigertaur/Grin.png
                         "></img>
                     Now I'm considering beating you up.
                 </div> 
@@ -79,7 +79,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/woof/Look.png
+                    /images/faces/woof/Look.png
                         "></img>
                     Ow... that hurt my feelings...
                 </div> 
@@ -87,7 +87,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/zera/Sneer.png
+                    /images/faces/zera/Sneer.png
                         "></img>
                     God (me), even my hellions wouldn't say such a thing.
                 </div> 
@@ -95,7 +95,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/harp/Excited.png
+                    /images/faces/harp/Excited.png
                         "></img>
                     You're looking tastier than usual today.
                 </div> 
@@ -103,7 +103,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/aimottle/Angry.png
+                    /images/faces/aimottle/Angry.png
                         "></img>
                     BRO I AM GOING TO THROW A WRENCH AT YOU-
                 </div> 
@@ -111,7 +111,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/charles/Look_Down.png
+                    /images/faces/charles/Look_Down.png
                         "></img>
                     ...I have nothing to say
                 </div> 
@@ -119,7 +119,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/tem/Look_Down.png
+                    /images/faces/tem/Look_Down.png
                         "></img>
                     Rangal... that's not cool...
                 </div> 
@@ -127,7 +127,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Worried.png
+                    /images/faces/spax/Worried.png
                         "></img>
                     Rangal, I suggest you apologize for what you said.
                 </div> 
@@ -135,12 +135,12 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/spax/Disappointed.png
+                    /images/faces/spax/Disappointed.png
                         "></img>
                     (Probably.)
                 </div> 
             </div>
         </div>
-        <script src="../js/scrollparallax.js" type=text/javascript></script>
+        <script src="/js/scrollparallax.js" type=text/javascript></script>
     </body>
 </html>
