--- a/html/resources.html
+++ b/html/resources.html
@@ -7,16 +7,16 @@
         <meta property="og:title" content="Resources">
         <meta property="og:description" content="Test page.">
         <meta property="og:type" content="website">
-        <meta name="og:image" itemprop="image" content="../images/faces/spax/Smirk.png" type="image/png">
+        <meta name="og:image" itemprop="image" content="https://spiritaxolotl.github.io/images/faces/spax/Smirk.png" type="image/png">
         <!---->
         <!--<meta http-equiv="Refresh" content="0; url='sitelist'"/>-->
         <!---->
-        <link rel="icon" href="../images/icons/Smirk_Circle.png"></link>
+        <link rel="icon" href="/images/icons/Smirk_Circle.png"></link>
         <!--phucking bootstrap-->
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <script src="../js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="/css/bootstrap.min.css">
+        <script src="/js/bootstrap.min.js"></script>
         <!---->
-        <link rel="stylesheet" href="../css/styles.css" type=text/css>
+        <link rel="stylesheet" href="/css/styles.css" type=text/css>
         <link rel="canonical" href="https://spiritaxolotl.github.io/html/resources"/>
         <title>All of Spax's Face Sprites</title>
     </head>
@@ -25,7 +25,7 @@
             <div class="text-box flex-container unselectable">
                 <div>
                         <img src="
-                    ../images/faces/yoki/Dizzy.png
+                    /images/faces/yoki/Dizzy.png
                         "></img>
                     I am dizzy Yoki.
                 </div> 
@@ -37,6 +37,6 @@
                 </div>
             </div>
         </div>
-        <script src="../js/scrollparallax.js" type=text/javascript></script>
+        <script src="/js/scrollparallax.js" type=text/javascript></script>
     </body>
 </html>
